core/grammar/PrismTemplateParser.py
# Generated from PrismTemplate.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PrismTemplateParser ( Parser ):

    grammarFileName = "PrismTemplate.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'A'", "'@'", "'bool'", "'clock'", "'const'", 
                     "'ctmc'", "'C'", "'double'", "'dtmc'", "'E'", "'endinit'", 
                     "'endinvariant'", "'endmodule'", "'endrewards'", "'endsystem'", 
                     "'false'", "'formula'", "'filter'", "'func'", "'F'", 
                     "'global'", "'G'", "'init'", "'invariant'", "'I'", 
                     "'int'", "'label'", "'max'", "'mdp'", "'min'", "'module'", 
                     "'X'", "'nondeterministic'", "'Pmax'", "'Pmin'", "'P'", 
                     "'probabilistic'", "'prob'", "'pta'", "'rate'", "'rewards'", 
                     "'Rmax'", "'Rmin'", "'R'", "'S'", "'stochastic'", "'system'", 
                     "'true'", "'U'", "'W'", "'!'", "'&'", "'|'", "'=>'", 
                     "'<=>'", "'->'", "':'", "';'", "','", "'..'", "'('", 
                     "')'", "'['", "']'", "'[['", "']]'", "'{'", "'}'", 
                     "'='", "'!='", "'<'", "'>'", "'<<'", "'>>'", "'<='", 
                     "'>='", "'+'", "'-'", "'*'", "'/'", "'''", "'<-'", 
                     "'?'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "A", "AT", "BOOL", "CLOCK", "CONST", 
                      "CTMC", "C", "DOUBLE", "DTMC", "E", "ENDINIT", "ENDINVARIANT", 
                      "ENDMODULE", "ENDREWARDS", "ENDSYSTEM", "FALSE", "FORMULA", 
                      "FILTER", "FUNC", "F", "GLOBAL", "G", "INIT", "INVARIANT", 
                      "I", "INT", "LABEL", "MAX", "MDP", "MIN", "MODULE", 
                      "X", "NONDETERMINISTIC", "PMAX", "PMIN", "P", "PROBABILISTIC", 
                      "PROB", "PTA", "RATE", "REWARDS", "RMAX", "RMIN", 
                      "R", "S", "STOCHASTIC", "SYSTEM", "TRUE", "U", "W", 
                      "NOT", "AND", "OR", "IMPLIES", "IFF", "RARROW", "COLON", 
                      "SEMICOLON", "COMMA", "DOTS", "LPARENTH", "RPARENTH", 
                      "LBRACKET", "RBRACKET", "DLBRACKET", "DRBRACKET", 
                      "LBRACE", "RBRACE", "EQ", "NE", "LT", "GT", "DLT", 
                      "DGT", "LE", "GE", "PLUS", "MINUS", "TIMES", "DIVIDE", 
                      "PRIME", "RENAME", "QMARK", "DQUOTE", "REG_INT", "REG_DOUBLE", 
                      "REG_IDENTPRIME", "REG_IDENT", "PREPROC", "WS", "Block_comment", 
                      "Line_comment" ]

    RULE_expression = 0
    RULE_identifier = 1
    RULE_identifier_prime = 2
    RULE_native_type = 3
    RULE_program = 4
    RULE_statements = 5
    RULE_model_type = 6
    RULE_common_declarations = 7
    RULE_common_declaration = 8
    RULE_constant_declaration = 9
    RULE_formula_declaration = 10
    RULE_expr_or_replacement = 11
    RULE_global_declaration = 12
    RULE_init_declaration = 13
    RULE_module_declarations = 14
    RULE_module_declaration = 15
    RULE_module_content = 16
    RULE_module_rename = 17
    RULE_id_assign = 18
    RULE_id_assign_block = 19
    RULE_module_desc = 20
    RULE_var_declarations = 21
    RULE_var_declaration = 22
    RULE_range_declaration = 23
    RULE_guard_declarations = 24
    RULE_guard_declaration = 25
    RULE_guard_updates = 26
    RULE_guard_update = 27
    RULE_state_updates = 28
    RULE_state_update = 29
    RULE_replacement = 30

    ruleNames =  [ "expression", "identifier", "identifier_prime", "native_type", 
                   "program", "statements", "model_type", "common_declarations", 
                   "common_declaration", "constant_declaration", "formula_declaration", 
                   "expr_or_replacement", "global_declaration", "init_declaration", 
                   "module_declarations", "module_declaration", "module_content", 
                   "module_rename", "id_assign", "id_assign_block", "module_desc", 
                   "var_declarations", "var_declaration", "range_declaration", 
                   "guard_declarations", "guard_declaration", "guard_updates", 
                   "guard_update", "state_updates", "state_update", "replacement" ]

    EOF = Token.EOF
    A=1
    AT=2
    BOOL=3
    CLOCK=4
    CONST=5
    CTMC=6
    C=7
    DOUBLE=8
    DTMC=9
    E=10
    ENDINIT=11
    ENDINVARIANT=12
    ENDMODULE=13
    ENDREWARDS=14
    ENDSYSTEM=15
    FALSE=16
    FORMULA=17
    FILTER=18
    FUNC=19
    F=20
    GLOBAL=21
    G=22
    INIT=23
    INVARIANT=24
    I=25
    INT=26
    LABEL=27
    MAX=28
    MDP=29
    MIN=30
    MODULE=31
    X=32
    NONDETERMINISTIC=33
    PMAX=34
    PMIN=35
    P=36
    PROBABILISTIC=37
    PROB=38
    PTA=39
    RATE=40
    REWARDS=41
    RMAX=42
    RMIN=43
    R=44
    S=45
    STOCHASTIC=46
    SYSTEM=47
    TRUE=48
    U=49
    W=50
    NOT=51
    AND=52
    OR=53
    IMPLIES=54
    IFF=55
    RARROW=56
    COLON=57
    SEMICOLON=58
    COMMA=59
    DOTS=60
    LPARENTH=61
    RPARENTH=62
    LBRACKET=63
    RBRACKET=64
    DLBRACKET=65
    DRBRACKET=66
    LBRACE=67
    RBRACE=68
    EQ=69
    NE=70
    LT=71
    GT=72
    DLT=73
    DGT=74
    LE=75
    GE=76
    PLUS=77
    MINUS=78
    TIMES=79
    DIVIDE=80
    PRIME=81
    RENAME=82
    QMARK=83
    DQUOTE=84
    REG_INT=85
    REG_DOUBLE=86
    REG_IDENTPRIME=87
    REG_IDENT=88
    PREPROC=89
    WS=90
    Block_comment=91
    Line_comment=92

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTH(self):
            return self.getToken(PrismTemplateParser.LPARENTH, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PrismTemplateParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PrismTemplateParser.ExpressionContext,i)


        def RPARENTH(self):
            return self.getToken(PrismTemplateParser.RPARENTH, 0)

        def NOT(self):
            return self.getToken(PrismTemplateParser.NOT, 0)

        def MINUS(self):
            return self.getToken(PrismTemplateParser.MINUS, 0)

        def REG_IDENT(self):
            return self.getToken(PrismTemplateParser.REG_IDENT, 0)

        def REG_INT(self):
            return self.getToken(PrismTemplateParser.REG_INT, 0)

        def REG_DOUBLE(self):
            return self.getToken(PrismTemplateParser.REG_DOUBLE, 0)

        def TRUE(self):
            return self.getToken(PrismTemplateParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(PrismTemplateParser.FALSE, 0)

        def QMARK(self):
            return self.getToken(PrismTemplateParser.QMARK, 0)

        def COLON(self):
            return self.getToken(PrismTemplateParser.COLON, 0)

        def IMPLIES(self):
            return self.getToken(PrismTemplateParser.IMPLIES, 0)

        def IFF(self):
            return self.getToken(PrismTemplateParser.IFF, 0)

        def OR(self):
            return self.getToken(PrismTemplateParser.OR, 0)

        def AND(self):
            return self.getToken(PrismTemplateParser.AND, 0)

        def EQ(self):
            return self.getToken(PrismTemplateParser.EQ, 0)

        def NE(self):
            return self.getToken(PrismTemplateParser.NE, 0)

        def LT(self):
            return self.getToken(PrismTemplateParser.LT, 0)

        def LE(self):
            return self.getToken(PrismTemplateParser.LE, 0)

        def GT(self):
            return self.getToken(PrismTemplateParser.GT, 0)

        def GE(self):
            return self.getToken(PrismTemplateParser.GE, 0)

        def PLUS(self):
            return self.getToken(PrismTemplateParser.PLUS, 0)

        def TIMES(self):
            return self.getToken(PrismTemplateParser.TIMES, 0)

        def DIVIDE(self):
            return self.getToken(PrismTemplateParser.DIVIDE, 0)

        def getRuleIndex(self):
            return PrismTemplateParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PrismTemplateParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrismTemplateParser.LPARENTH]:
                self.state = 63
                self.match(PrismTemplateParser.LPARENTH)
                self.state = 64
                self.expression(0)
                self.state = 65
                self.match(PrismTemplateParser.RPARENTH)
                pass
            elif token in [PrismTemplateParser.NOT]:
                self.state = 67
                self.match(PrismTemplateParser.NOT)
                self.state = 68
                self.expression(17)
                pass
            elif token in [PrismTemplateParser.MINUS]:
                self.state = 69
                self.match(PrismTemplateParser.MINUS)
                self.state = 70
                self.expression(6)
                pass
            elif token in [PrismTemplateParser.REG_IDENT]:
                self.state = 71
                self.match(PrismTemplateParser.REG_IDENT)
                pass
            elif token in [PrismTemplateParser.REG_INT]:
                self.state = 72
                self.match(PrismTemplateParser.REG_INT)
                pass
            elif token in [PrismTemplateParser.REG_DOUBLE]:
                self.state = 73
                self.match(PrismTemplateParser.REG_DOUBLE)
                pass
            elif token in [PrismTemplateParser.TRUE]:
                self.state = 74
                self.match(PrismTemplateParser.TRUE)
                pass
            elif token in [PrismTemplateParser.FALSE]:
                self.state = 75
                self.match(PrismTemplateParser.FALSE)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 126
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 78
                        if not self.precpred(self._ctx, 22):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 22)")
                        self.state = 79
                        self.match(PrismTemplateParser.QMARK)
                        self.state = 80
                        self.expression(0)
                        self.state = 81
                        self.match(PrismTemplateParser.COLON)
                        self.state = 82
                        self.expression(23)
                        pass

                    elif la_ == 2:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 84
                        if not self.precpred(self._ctx, 21):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 21)")
                        self.state = 85
                        self.match(PrismTemplateParser.IMPLIES)
                        self.state = 86
                        self.expression(22)
                        pass

                    elif la_ == 3:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 87
                        if not self.precpred(self._ctx, 20):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 20)")
                        self.state = 88
                        self.match(PrismTemplateParser.IFF)
                        self.state = 89
                        self.expression(21)
                        pass

                    elif la_ == 4:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 90
                        if not self.precpred(self._ctx, 19):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 19)")
                        self.state = 91
                        self.match(PrismTemplateParser.OR)
                        self.state = 92
                        self.expression(20)
                        pass

                    elif la_ == 5:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 93
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 94
                        self.match(PrismTemplateParser.AND)
                        self.state = 95
                        self.expression(19)
                        pass

                    elif la_ == 6:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 96
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 97
                        self.match(PrismTemplateParser.EQ)
                        self.state = 98
                        self.expression(17)
                        pass

                    elif la_ == 7:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 99
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 100
                        self.match(PrismTemplateParser.NE)
                        self.state = 101
                        self.expression(16)
                        pass

                    elif la_ == 8:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 102
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 103
                        self.match(PrismTemplateParser.LT)
                        self.state = 104
                        self.expression(15)
                        pass

                    elif la_ == 9:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 105
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 106
                        self.match(PrismTemplateParser.LE)
                        self.state = 107
                        self.expression(14)
                        pass

                    elif la_ == 10:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 108
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 109
                        self.match(PrismTemplateParser.GT)
                        self.state = 110
                        self.expression(13)
                        pass

                    elif la_ == 11:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 111
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 112
                        self.match(PrismTemplateParser.GE)
                        self.state = 113
                        self.expression(12)
                        pass

                    elif la_ == 12:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 114
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 115
                        self.match(PrismTemplateParser.PLUS)
                        self.state = 116
                        self.expression(11)
                        pass

                    elif la_ == 13:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 117
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 118
                        self.match(PrismTemplateParser.MINUS)
                        self.state = 119
                        self.expression(10)
                        pass

                    elif la_ == 14:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 120
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 121
                        self.match(PrismTemplateParser.TIMES)
                        self.state = 122
                        self.expression(9)
                        pass

                    elif la_ == 15:
                        localctx = PrismTemplateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 123
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 124
                        self.match(PrismTemplateParser.DIVIDE)
                        self.state = 125
                        self.expression(8)
                        pass

             
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REG_IDENT(self):
            return self.getToken(PrismTemplateParser.REG_IDENT, 0)

        def getRuleIndex(self):
            return PrismTemplateParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = PrismTemplateParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(PrismTemplateParser.REG_IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Identifier_primeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REG_IDENTPRIME(self):
            return self.getToken(PrismTemplateParser.REG_IDENTPRIME, 0)

        def getRuleIndex(self):
            return PrismTemplateParser.RULE_identifier_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier_prime" ):
                listener.enterIdentifier_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier_prime" ):
                listener.exitIdentifier_prime(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_prime" ):
                return visitor.visitIdentifier_prime(self)
            else:
                return visitor.visitChildren(self)




    def identifier_prime(self):

        localctx = PrismTemplateParser.Identifier_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier_prime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(PrismTemplateParser.REG_IDENTPRIME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Native_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PrismTemplateParser.INT, 0)

        def DOUBLE(self):
            return self.getToken(PrismTemplateParser.DOUBLE, 0)

        def BOOL(self):
            return self.getToken(PrismTemplateParser.BOOL, 0)

        def getRuleIndex(self):
            return PrismTemplateParser.RULE_native_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNative_type" ):
                listener.enterNative_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNative_type" ):
                listener.exitNative_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNative_type" ):
                return visitor.visitNative_type(self)
            else:
                return visitor.visitChildren(self)




    def native_type(self):

        localctx = PrismTemplateParser.Native_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_native_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrismTemplateParser.BOOL) | (1 << PrismTemplateParser.DOUBLE) | (1 << PrismTemplateParser.INT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PrismTemplateParser.EOF, 0)

        def statements(self):
            return self.getTypedRuleContext(PrismTemplateParser.StatementsContext,0)


        def getRuleIndex(self):
            return PrismTemplateParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PrismTemplateParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrismTemplateParser.CONST) | (1 << PrismTemplateParser.CTMC) | (1 << PrismTemplateParser.DTMC) | (1 << PrismTemplateParser.FORMULA) | (1 << PrismTemplateParser.GLOBAL) | (1 << PrismTemplateParser.MDP) | (1 << PrismTemplateParser.MODULE) | (1 << PrismTemplateParser.PTA))) != 0):
                self.state = 137
                self.statements()


            self.state = 140
            self.match(PrismTemplateParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declarations(self):
            return self.getTypedRuleContext(PrismTemplateParser.Module_declarationsContext,0)


        def model_type(self):
            return self.getTypedRuleContext(PrismTemplateParser.Model_typeContext,0)


        def common_declarations(self):
            return self.getTypedRuleContext(PrismTemplateParser.Common_declarationsContext,0)


        def init_declaration(self):
            return self.getTypedRuleContext(PrismTemplateParser.Init_declarationContext,0)


        def getRuleIndex(self):
            return PrismTemplateParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = PrismTemplateParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrismTemplateParser.CTMC) | (1 << PrismTemplateParser.DTMC) | (1 << PrismTemplateParser.MDP) | (1 << PrismTemplateParser.PTA))) != 0):
                self.state = 142
                self.model_type()


            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PrismTemplateParser.CONST) | (1 << PrismTemplateParser.FORMULA) | (1 << PrismTemplateParser.GLOBAL))) != 0):
                self.state = 145
                self.common_declarations()


            self.state = 148
            self.module_declarations()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PrismTemplateParser.INIT:
                self.state = 149
                self.init_declaration()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Model_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DTMC(self):
            return self.getToken(PrismTemplateParser.DTMC, 0)
